<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/Rent_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="85dp"
            android:layout_marginBottom="45dp"
            android:layout_weight="1"
            android:text="@string/rent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Return_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="85dp"
            android:layout_marginBottom="45dp"
            android:layout_weight="1"
            android:text="@string/return1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Check_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="85dp"
            android:layout_weight="1"
            android:text="@string/check"
            android:textSize="20sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>