<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/RentDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/rentdevices"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/devicespinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/checkforA_btn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="255dp"
                android:layout_marginRight="50dp"
                android:text="@string/checkforA"
                android:textSize="14sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <Button
                android:id="@+id/select_btn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="225dp"
                android:layout_marginRight="50dp"
                android:text="@string/select_device" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EMPID"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="-10dp"
                android:text="@string/empID"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EMP_editText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EMPFName"
                android:layout_width="185dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                android:text="@string/empfirstname"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EMPF_editText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EMPLName"
                android:layout_width="185dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                android:text="@string/emplastname"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EMPLName_editText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Rent_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/rent_1" />

            <Button
                android:id="@+id/goBack_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:text="@string/backtomain" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>