<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/returndevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/returndevices"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rental_ID2"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="@string/rentalID"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/rental_editText"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EMPID2"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/empID"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EMPID_editText2"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/Return_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:text="@string/return2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/goBack_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="85dp"
                android:text="@string/backtomain"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>