<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_manager"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/managerid"
                android:layout_width="65dp"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/manager_ID"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/managerid_editText"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Password"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Password_editText"
                android:layout_width="175dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="18sp" />

            <Button
                android:id="@+id/goback_btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="85dp"
                android:text="@string/backtomain"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>