<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rental_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/rental_information1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/device_name"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/devicename"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/device_ID"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/deviceID"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EMP_Fname"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/empfirstname"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EMP_Lname"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/emplastname"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EMP_Pnumber"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/empphone"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rental_ID"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/rentalID"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/issue_date"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/issuedate"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="145dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/return_date"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/return_date"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="145dp"
                android:layout_height="35dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/goBack_btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:text="@string/backtomain"
                android:textSize="18sp" />

            <Button
                android:id="@+id/goBack_btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="85dp"
                android:text="@string/backtocheck"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>