<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello_manager"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/inputEMPID"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EMPID"
                android:layout_width="wrap_content"
                android:layout_height="45sp"
                android:layout_marginLeft="75dp"
                android:layout_weight="1"
                android:text="@string/empID"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EMPID_editText"
                android:layout_width="165sp"
                android:layout_height="45sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="75dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/check_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:text="@string/gocheck"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>